@@ -122,6 +122,7 @@
                     <source>21</source>
                     <fork>true</fork>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                         <arg>--add-exports=${open.tree}</arg>
                         <arg>--add-exports=${open.util}</arg>
                         <arg>--add-exports=${open.api}</arg>
